--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@types/react-modal-video": "^1.2.0",
     "axios": "^1.2.0",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/moment": "^2.13.0",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "react-modal-video": "^1.2.10"
   }
 }
