--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@types/react-modal-video": "^1.2.0",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.2.0",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
