--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
-    "@types/react-modal-video": "^1.2.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.2.0",
     "clsx": "^1.2.1",
+    "framer-motion": "^7.6.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
@@ -56,7 +56,6 @@
   },
   "devDependencies": {
     "@types/moment": "^2.13.0",
-    "@types/react-router-dom": "^5.3.3",
-    "react-modal-video": "^1.2.10"
+    "@types/react-router-dom": "^5.3.3"
   }
 }
