--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.2.0",
     "clsx": "^1.2.1",
     "framer-motion": "^7.6.19",
+    "googleapis": "^110.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
